# flipper-engine

./: .gitignore  CMakeLists.txt  README.md  cortexm4.csv
reference/: DDI0403E.txt  RM0434.txt
src/: boot.cpp  conform.cpp  flatmem.hpp  main_sfml.cpp  platform.hpp  st7565.hpp  system.hpp
src/arm/: alu.hpp  cpu.hpp  exceptions.cpp  exec.cpp  exec32.cpp
tests/: test_alu.cpp
